src/test/deca/context/invalid/resultats/test_selection_left_operand-cont.res
./src/test/deca/context/invalid/test_selection_left_operand.deca:12:1: The left expression of the selection is not of type class
